--- a/Chalkable.Web/assets/jade/activities/grading/AvgCodesPopup.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/AvgCodesPopup.jade
@@ -28,5 +28,5 @@ h3 #{self.getStudentName()}, #{self.getGradingPeriodName()}
         type="button",
         data-average-id= self.getAverageId(),
         data-row-index= self.getRowIndex()
-    ).chlk-button.blue-gradient-btn.save-codes=Msg.Save
+    ).chlk-button.blue-button.save-codes=Msg.Save
     BUTTON(type="button").chlk-button.grey-button.cancel-codes=Msg.Cancel
