--- a/Chalkable.Web/assets/jade/activities/grading/StandardsInput.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/StandardsInput.jade
@@ -9,6 +9,6 @@
     ).comment-value
     +Hidden('studentid', self.getStudentId().valueOf())
     input(value=value, name="gradevalue", data-value=value, class=(value ? "" : "empty-grade" )).grade-autocomplete.value-input
-    .grading-input-popup.chlk-pop-up-container.popup-bottom
-        .pop-up-triangle.big
-        +LabeledCheckbox(Msg.Fill, 'fill', false, (self.getGradeValue() === "" || self.getGradeValue() === null))(addCallBack = true, containerClass = "fill-grade-container").fill-grade
+    .grading-input-popup
+        .popup-content
+            +LabeledCheckbox(Msg.Fill, 'fill', false, (self.getGradeValue() === "" || self.getGradeValue() === null))(addCallBack = true, containerClass = "fill-grade-container").fill-grade
