--- a/Chalkable.Web/assets/jade/activities/grading/GradingAvgInput.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingAvgInput.jade
@@ -9,9 +9,9 @@ value = self.getModel().displayAvgGradeValue()
     +Hidden('codesString', self.getCodesString()).codes-text
     +Hidden('studentid', self.getStudentId().valueOf())
     +Hidden('gradingPeriodId', self.getGradingPeriodId().valueOf())
-    .grading-input-popup.chlk-pop-up-container.popup-bottom
-        .pop-up-triangle.big
-        if self.isMayBeExempt()
-            +LabeledCheckbox(Msg.Exempt, 'isexempt', self.isExempt())(data-value=self.isExempt(), addCallBack = true).with-value.exempt-checkbox
-        else
-            +Hidden('isexempt', self.isExempt())
+    .grading-input-popup
+        .popup-content
+            if self.isMayBeExempt()
+                +LabeledCheckbox(Msg.Exempt, 'isexempt', self.isExempt())(data-value=self.isExempt(), addCallBack = true).with-value.exempt-checkbox
+            else
+                +Hidden('isexempt', self.isExempt())
