--- a/Chalkable.Web/assets/sass2/3_molecules/_grading-items.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_grading-items.sass
@@ -43,3 +43,8 @@
     line-height: initial
     display: block
     font: normal 14px Arial
+
+.no-items-text
+  font: bold 22px/260px 'Reenie Beanie'
+  text-align: center
+  height: 260px
