--- a/Chalkable.Web/assets/jade/activities/apps/app-category-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-category-dialog.jade
@@ -12,4 +12,4 @@
                     input(type="text",name="description", value=self.description)
                 .x-form-field
                 +Button()(type="submit").special-button.blue-button.submit-btn Submit
-                +Button.special-button.red-button Cancel
+                +Button(type="button").special-button.red-button.close Cancel
