--- a/Chalkable.Web/assets/jade/activities/grading/GradingPeriodFinalGrade.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingPeriodFinalGrade.jade
@@ -1,23 +1,21 @@
-items = self.getStudentFinalGrades()
-selectedIndex = self.getSelectedIndex()
-gradingPeriod = self.getGradingPeriod()
-currentAvg = self.getCurrentAverage()
-+ActionForm('grading', 'loadGradingPeriodFinalGradesSummary').load-grading-period
-    +Hidden('classId', self.getClassId())
-    +Hidden('gradingPeriodId', gradingPeriod.getId().valueOf())
-    +Hidden('selectedIndex', selectedIndex).selected-value
-    .gp-title-block
+-var items = self.getStudentFinalGrades()
+-var selectedIndex = self.getSelectedIndex()
+-var gradingPeriod = self.getGradingPeriod()
+-var currentAvg = self.getCurrentAverage()
+
+.buttons-row
+    +ActionForm('grading', 'loadGradingPeriodFinalGradesSummary').load-grading-period
+        +Hidden('classId', self.getClassId())
+        +Hidden('gradingPeriodId', gradingPeriod.getId().valueOf())
+        +Hidden('selectedIndex', selectedIndex).selected-value
         if items.length && currentAvg
-            .grading-selects.no-loading
+            .grading-selects
                 +Select('averageId').avg-select
                     each item in self.getAverages()
                         +Option(item.getAverageId().valueOf(), item.getAverageName(), item.getAverageId() == self.getCurrentAverage().getAverageId())
-        .gp-title=gradingPeriod.getFinalTitleText()
-        if items.length && currentAvg
-            if self.isAbleEdit() && gradingPeriod.isAblePostGradeBook()
-                +ActionLinkButton('grading','postGradeBook', self.getClassId(), gradingPeriod.getId(), null, null, true).message-button.blue-gradient-btn.post-gradebook-button.no-loading=Msg.Post
-        .gp-triangle
-div(class = (self.isAvgChanged() ? "opened slided" : "")).gp-data
+
+            +ActionButton('grading','postGradeBook', self.getClassId(), gradingPeriod.getId(), null, null, true).blue-button.post-gradebook-button.gp-button=Msg.Post
+.grades-container
     if !items.length
         .no-items-text=Msg.No_grades_yet
     else
@@ -28,7 +26,7 @@ div(class = (self.isAvgChanged() ? "opened slided" : "")).gp-data
             +ListView(items)(
                 selectedIndex = selectedIndex,
                 scrollToElementTimeout = 550
-            ).grades-individual.people-list.final-grid
+            ).grades-individual.people-list.final-grid.grading
                 each item, i in items
                     +RenderWith(item, chlk.templates.grading.FinalGradeStudentBlockTpl)(
                         selected = selectedIndex == i,
