updated Week and Day calendars

--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/DayCalendarBody.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/DayCalendarBody.jade
@@ -8,19 +8,18 @@
         each item in self.getItems()
             div(class = item.getTodayClassName()).gradient-cnt.item.week-day.day
                 ul
-                    items = item.getCalendarDayItems() || [];
+                    items = item.getAnnouncementPeriods() || [];
                     each calendarDayItem,i in items
-                        period = calendarDayItem.getAnnouncementClassPeriods()[0];
-                        +ActionLink('calendar', 'showDayPopUp', item.getDate().format('mm-dd-yy'), i)(class = period && self.isMainCalendar() ? "" : "disabled").period-item.day
-                            if(item.getDate().getDate().getDay() == 0)
+                        period = calendarDayItem.getPeriod();
+                        +ActionLink('calendar', 'showWeekBarPopUp', item.getDate().format('mm-dd-yy'), i)(class = period.getStartTime() && self.isMainCalendar() ? "" : "disabled").period-item.day
+                            if(item.getDayOfWeek() == 0)
                                 .period-info=(i+1)
-                                span.time=calendarDayItem.getPeriod().displayPeriodTimeRange()
                             else
                                 li
-                                    if(period)
-                                        clazz = period.getClassPeriod().getClazz();
+                                    -var className = period.getFullClassName()
+                                    if className
                                         .course-icon
-                                            +ClassImg(clazz, 45, 80)
+                                            +ClassImg(period, 45, 80)
                                         .p-container
                                             p.title.day-title
-                                                span(data-tooltip=clazz.getFullClassName(), data-tooltip-type ="overflow")=clazz.getFullClassName()
+                                                span(data-tooltip=className, data-tooltip-type ="overflow")=className
