--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekBarPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekBarPopUp.jade
@@ -1,18 +1,15 @@
 .calendar-popup
     announcements = self.getAnnouncements();
-    if announcements.length > 0
-        .announcements-list
-            h2=Msg.Announcement(true)
-            ul.day-announcements
-                each item in announcements
-                    li.items
-                        //A(href="#announcement/view/" + item.getId().valueOf()).pop-up-announcement
-                        +ActionLink('announcement', 'view', item.getId())(class="announcement-type-" + item.getChalkableAnnouncementType()).pop-up-announcement
-                            div
-                                p.title=item.getTitle()
-                                p.classname-under=item.getClassName() || item.getPersonName()
+    .announcements-list
+        h2=Msg.Announcement(true)
+        ul.day-announcements
+            each item in announcements
+                li.items
+                    +ActionLink('announcement', 'view', item.getId())(class="announcement-type-" + item.getChalkableAnnouncementType()).pop-up-announcement
+                        div
+                            +TooltipWithOverflow(item.getTitle()).item-title
     if !self.getUserRole().isStudent()
-        +ActionLink('announcement', 'add', null, chlk.models.announcement.AnnouncementTypeEnum.ANNOUNCEMENT, self.getDate().format('mm/dd/yy'), true).ann-button.plus-ann
+        +ActionLink('announcement', 'addViaCalendar', self.getDate().format('mm-dd-yy'), true, self.getSelectedClassId() || '').ann-button.plus-ann
 
 
 
