updated final grades UI

--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -39,6 +39,7 @@
 @import "3_molecules/select"
 @import "3_molecules/lr-toolbar"
 @import "3_molecules/grading-items"
+@import "3_molecules/chart"
 
 @import "6_popups/list-new-popup"
 
