--- a/Chalkable.Web/assets/sass2/3_molecules/_calendar.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_calendar.sass
@@ -5,6 +5,23 @@
   background: #fff
   //overflow: hidden
 
+  .day-calendar-list-item
+    >DIV
+      display: inline-block
+      vertical-align: middle
+      overflow: hidden
+
+    .course-icon
+      width: 45px
+      height: 40px
+
+    .p-container
+      width: 120px
+      font-size: 12px
+      font-style: italic
+      white-space: nowrap
+      line-height: 84px
+
   .header
     text-align: center
     position: relative
